<resources>
    <string name="app_name">TambalIn</string>
    <string name="openDrawer">Drawer dibuka</string>
    <string name="closeDrawer">Drawer ditutup</string>
    <string name="navigation_view_item_1">Maps</string>
    <string name="navigation_view_item_2">Profil</string>
    <string name="navigation_view_item_3">List Tambal Ban Terdekat</string>
    <string name="navigasi_kategori_2">Sub Item Navigasi</string>
    <string name="navigation_view_item_4">Pengaturan</string>
    <string name="navigation_view_item_5">Tentang</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyD0TqbOtF3dMIPeBHBNyilGBMKtJbtN4Ys</string>
</resources>
