<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/navigation1"
            android:checked="false"
            android:icon="@drawable/ic_maps"
            android:title="@string/navigation_view_item_1"/>
        <item
            android:title="@string/navigation_view_item_2"
            android:id="@+id/navigation2"
            android:checked="false"
            android:icon="@drawable/ic_profile"/>
        <item
            android:title="@string/navigation_view_item_3"
            android:checked="false"
            android:id="@+id/navigation3"
            android:icon="@drawable/ic_daftar"/>
    </group>

    <item
        android:id="@+id/navigasi_kategori2"
        android:title="@string/navigasi_kategori_2">
        <menu>
            <item
                android:title="@string/navigation_view_item_4"
                android:id="@+id/navigation4"
                android:checked="false"
                android:icon="@drawable/ic_settings"/>
            <item
                android:title="@string/navigation_view_item_5"
                android:id="@+id/navigation5"
                android:checked="false"
                android:icon="@drawable/ic_about"/>
        </menu>
    </item>
</menu>